[tool.poetry]
name = "poiib2"
version = "0.1.0"
description = ""
authors = ["Wojciech <wojciech.oczkowski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
pydantic = "^2.6.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
